# Talon

./: .env  .gitignore  Cargo.toml  README.md  dist-workspace.toml
src/: main.rs  utils.rs
src/tg_handler/: blacklist.rs  communication.rs  counter.rs  handler.rs  initial_session.rs  mod.rs  new_session.rs  whitelist.rs
src/ui_components/: charts.rs  comm_handler.rs  counter.rs  handler.rs  initializer.rs  keys.rs  keys_ui.rs  mod.rs  session.rs  states.rs  tg_comms.rs  user_table.rs  whitelist.rs
src/ui_components/processor/: counter_counts.rs  date_handler.rs  date_navigator.rs  font_dl.rs  mod.rs  parsed_chat.rs  states.rs  tg_comms.rs  version_checker.rs
src/ui_components/tab_ui/: blacklist.rs  charts.rs  counter.rs  mod.rs  session.rs  user_table.rs  whitelist.rs
src/ui_components/widgets/: animated_label.rs  mod.rs  row_label.rs
