[package]
name = "talon-gui"
version = "1.3.1"
edition = "2024"
description = """
On-demand Telegram chat analytic generator
"""
readme = "README.md"
homepage = "https://github.com/TheRustyPickle/Talon"
repository = "https://github.com/TheRustyPickle/Talon"
license = "MIT"
keywords = ["analytics", "data", "egui", "gui", "telegram"]
categories = ["gui"]
exclude = ["/fonts"]

[[bin]]
name = "talon"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
csv = "1.4.0"
dirs = "6.0.0"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", default-features = false, features = [
    "datepicker",
] }
egui_plot = "0.34.1"
egui-selectable-table = { version = "0.5.0", features = ["fuzzy-matching"] }
egui-theme-lerp = "0.4.0"
grammers-client = "=0.7.0"
grammers-crypto = "=0.7.0"
grammers-mtproto = "=0.7.0"
grammers-mtsender = "=0.7.0"
grammers-session = "=0.7.0"
grammers-tl-gen = "=0.7.0"
grammers-tl-types = "=0.7.0"
log = "0.4.29"
nucleo-matcher = "0.3.1"
open = "5.3.3"
pretty_env_logger = "0.5.0"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
